# bevy_map_editor

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yaml
crates/bevy_map/: Cargo.toml  README.md
crates/bevy_map/src/: lib.rs
crates/bevy_map_animation/: README.md
crates/bevy_map_autotile/: README.md
crates/bevy_map_core/: README.md
crates/bevy_map_core/src/: entity_type_config.rs  layer.rs  level.rs  lib.rs  project.rs  world.rs
crates/bevy_map_derive/: README.md
crates/bevy_map_derive/src/: lib.rs
crates/bevy_map_dialogue/: README.md
crates/bevy_map_editor/: Cargo.toml  README.md
crates/bevy_map_editor/src/: bevy_cli.rs  game_runner.rs  lib.rs
crates/bevy_map_editor/src/commands/: shortcuts.rs
crates/bevy_map_editor/src/preferences/: file.rs
crates/bevy_map_editor/src/project/: file.rs  mod.rs
crates/bevy_map_editor/src/render/: mod.rs
crates/bevy_map_editor/src/tools/: mod.rs
crates/bevy_map_editor/src/ui/: asset_browser.rs  dialogs.rs  game_settings_dialog.rs  inspector.rs  menu_bar.rs  mod.rs  schema_editor.rs  settings_dialog.rs  theme.rs  tileset.rs  toolbar.rs  world_view.rs
crates/bevy_map_runtime/: README.md
crates/bevy_map_runtime/src/: camera.rs  collision.rs  entity_input.rs  entity_physics.rs  entity_registry.rs  entity_sprite.rs  lib.rs
crates/bevy_map_schema/src/: types.rs
examples/: Cargo.toml
examples/animation/: auto_demo.rs  manual_demo.rs  triggers_demo.rs
examples/collision/: demo.rs
examples/custom_editor/: main.rs
examples/custom_entities/: demo.rs
examples/dialogue/: auto_demo.rs  manual_demo.rs
examples/runtime_loader/: main.rs
examples/tileset/: demo.rs
