[workspace]
resolver = "2"
members = [
    "crates/bevy_map",
    "crates/bevy_map_core",
    "crates/bevy_map_autotile",
    "crates/bevy_map_animation",
    "crates/bevy_map_dialogue",
    "crates/bevy_map_derive",
    "crates/bevy_map_runtime",
    "crates/bevy_map_schema",
    "crates/bevy_map_editor",
    "examples",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbuehler23/bevy_map_editor"
keywords = ["bevy", "tilemap", "gamedev", "editor", "tools"]
categories = ["game-development", "graphics", "rendering"]
rust-version = "1.76.0"

[workspace.dependencies]
# Internal crates (path for local dev, version for crates.io publishing)
bevy_map = { version = "0.2.0", path = "crates/bevy_map" }
bevy_map_core = { version = "0.2.0", path = "crates/bevy_map_core" }
bevy_map_autotile = { version = "0.2.0", path = "crates/bevy_map_autotile" }
bevy_map_animation = { version = "0.2.0", path = "crates/bevy_map_animation" }
bevy_map_dialogue = { version = "0.2.0", path = "crates/bevy_map_dialogue" }
bevy_map_derive = { version = "0.2.0", path = "crates/bevy_map_derive" }
bevy_map_runtime = { version = "0.2.0", path = "crates/bevy_map_runtime" }
bevy_map_schema = { version = "0.2.0", path = "crates/bevy_map_schema" }
bevy_map_editor = { version = "0.2.0", path = "crates/bevy_map_editor" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Core utilities
uuid = { version = "1.0", features = ["v4", "serde"] }

# Bevy ecosystem (0.17 compatible)
bevy = "0.17"
bevy_ecs_tilemap = "0.17"
bevy_egui = "0.38"
avian2d = "0.4"

# Platform-specific
rfd = "0.15"

# Clippy lints - allow common patterns in editor code
[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
map_entry = "allow"
option_map_or_none = "allow"
derivable_impls = "allow"
field_reassign_with_default = "allow"
ptr_arg = "allow"
unnecessary_to_owned = "allow"
unnecessary_owned_empty_strings = "allow"
unnecessary_map_or = "allow"
