[package]
name = "bevy_map_editor_examples"
version = "0.1.0"
edition = "2021"
publish = false

# This is a virtual package, no library
[lib]
path = "lib.rs"

[dependencies]
bevy = { workspace = true }
# Single import for all bevy_map runtime functionality
bevy_map = { workspace = true, features = ["physics"] }
# Editor (for custom_editor example only)
bevy_map_editor = { workspace = true, features = ["runtime"] }
# For physics examples
avian2d = { workspace = true }
# Serialization (for manual loading examples)
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[[example]]
name = "custom_editor"
path = "custom_editor/main.rs"

[[example]]
name = "runtime_loader"
path = "runtime_loader/main.rs"

# Animation examples - auto vs manual loading
[[example]]
name = "animation_auto_demo"
path = "animation/auto_demo.rs"

[[example]]
name = "animation_manual_demo"
path = "animation/manual_demo.rs"

[[example]]
name = "animation_triggers_demo"
path = "animation/triggers_demo.rs"

# Dialogue examples - auto vs manual loading
[[example]]
name = "dialogue_auto_demo"
path = "dialogue/auto_demo.rs"

[[example]]
name = "dialogue_manual_demo"
path = "dialogue/manual_demo.rs"

# Other examples
[[example]]
name = "custom_entities_demo"
path = "custom_entities/demo.rs"

[[example]]
name = "tileset_demo"
path = "tileset/demo.rs"

# Collision demo - physics integration
[[example]]
name = "collision_demo"
path = "collision/demo.rs"

[lints]
workspace = true
