[package]
name = "bevy_map_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Full-featured map editor for Bevy games with autotile support"
keywords = ["bevy", "tilemap", "editor", "level", "terrain"]
categories = ["game-development", "gui"]
readme = "README.md"

[[bin]]
name = "bevy_map_editor"
path = "src/bin/bevy_map_editor.rs"

[dependencies]
bevy_map_core = { workspace = true }
bevy_map_autotile = { workspace = true }
bevy_map_schema = { workspace = true }
bevy_map_animation = { workspace = true }
bevy_map_dialogue = { workspace = true }
bevy_map_runtime = { workspace = true, optional = true }
bevy = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
bevy_egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
image = "0.25"
directories = "5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { workspace = true, optional = true }

[features]
default = ["native"]
native = ["rfd"]
runtime = ["bevy_map_runtime"]
wasm = []

[lints]
workspace = true
